[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/game_over.gd" id=1]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource(1)

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.03, 0.03, 0.08, 1)

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Center"]
custom_minimum_size = Vector2(400, 0)
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Title" type="Label" parent="Center/VBox"]
text = "Game Over"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="Center/VBox"]
text = "Score: 0"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="Center/VBox"]
text = "Retry"

[node name="QuitButton" type="Button" parent="Center/VBox"]
text = "Quit to Menu"
